[gd_scene load_steps=12 format=3 uid="uid://cufr8tqplsrkx"]

[ext_resource type="FontFile" uid="uid://bbpfkh42uuigb" path="res://UI/nintendo-nes-font.ttf" id="1_bayiy"]
[ext_resource type="Script" path="res://Scripts/credits.gd" id="1_btg8u"]
[ext_resource type="AudioStream" uid="uid://bbf1rqpwbwa6" path="res://SFX/OptionSelect.wav" id="2_ioe4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncvyk"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wdu8m"]
font = ExtResource("1_bayiy")

[sub_resource type="LabelSettings" id="LabelSettings_2imud"]
font = ExtResource("1_bayiy")

[sub_resource type="LabelSettings" id="LabelSettings_4haq5"]
font = ExtResource("1_bayiy")

[sub_resource type="LabelSettings" id="LabelSettings_cv7yb"]
font = ExtResource("1_bayiy")

[sub_resource type="Animation" id="Animation_yb8e0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q1a0e"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n31wg"]
_data = {
"RESET": SubResource("Animation_yb8e0"),
"blink": SubResource("Animation_q1a0e")
}

[node name="Credits" type="CanvasLayer"]
script = ExtResource("1_btg8u")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ncvyk")

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="AuthorText" type="Label" parent="PanelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 154.0
offset_bottom = -346.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME CREATED BY: KOLBA SEBASTIAN"
label_settings = SubResource("LabelSettings_wdu8m")
autowrap_mode = 2

[node name="AssetText" type="Label" parent="PanelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 214.0
offset_bottom = -286.0
grow_horizontal = 2
grow_vertical = 2
text = "ASSETS USED:"
label_settings = SubResource("LabelSettings_wdu8m")
autowrap_mode = 2

[node name="JungleParallaxText" type="Label" parent="PanelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 254.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
text = "JUNGLE PARALLAX ASSET BY PIXEL OVERLOAD ON ITCH.IO"
label_settings = SubResource("LabelSettings_wdu8m")
autowrap_mode = 2

[node name="CreditsMusicText" type="Label" parent="PanelContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 314.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "MUSIC FROM OPENGAMEART.ORG ON CC PUBLIC DOMAIN LICENSE
"
label_settings = SubResource("LabelSettings_2imud")
autowrap_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 300

[node name="TitleText" type="Label" parent="PanelContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CREDITS"
label_settings = SubResource("LabelSettings_4haq5")
horizontal_alignment = 1

[node name="BackContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 300

[node name="BackText" type="Label" parent="PanelContainer/BackContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"
label_settings = SubResource("LabelSettings_cv7yb")
horizontal_alignment = 1

[node name="BackAnim" type="AnimationPlayer" parent="PanelContainer/BackContainer/BackText"]
libraries = {
"": SubResource("AnimationLibrary_n31wg")
}

[node name="OptionAccepted" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ioe4l")

[node name="CreditsTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="CreditsTimer" to="." method="_on_credits_timer_timeout"]
